Minor code improvements for NodeStatsTest